# zarrio

./: .buildinfo  .dockerignore  Dockerfile  Dockerfile.prod  Makefile  README.md  analysis.html  api.html  changelog.html  chunking.html  cli.html  configuration.html  contributing.html  datamesh.html  docker-compose.yml  docker.html  examples.html  genindex.html  index.html  installation.html  modules.html  objects.inv  onzarr2.html  packing.html  parallel.html  py-modindex.html  pyproject.toml  quickstart.html  requirements.txt  requirements_dev.txt  search.html  searchindex.js  tbump.toml  test_cli.py  zarrify.html
.github/workflows/: python-publish.yml  testing.yml
.sisyphus/: boulder.json
.sisyphus/plans/: adopt-datamesh-model.md  (+1 more)
_modules/: functools.html  index.html
_sources/: analysis.rst.txt  changelog.rst.txt  cli.rst.txt  configuration.rst.txt  examples.rst.txt  installation.rst.txt  modules.rst.txt  onzarr2.rst.txt  packing.rst.txt  quickstart.rst.txt
docs/: index.md
examples/: README.md  access_pattern_speed_test.py  chunking_demo.py  comprehensive_access_pattern_test.py  config.yaml  configurable_chunking_demo.py  consolidated_chunking_demo.py  datamesh_demo.py  datamesh_groups_config.yaml  demo.py  diagnose_compression.py  final_retry_demo.py  full_demo.py  intelligent_chunking_access_pattern_test.py  intelligent_chunking_demo.py  packing_example.py  parallel_demo.py  pydantic_demo.py  retry_demo.py  retry_logic_demo.py  retry_logic_example.py  rolling_archive_datamesh_demo.py  rolling_archive_demo.py  simple_access_pattern_test.py  test_analyze.py  test_hierarchical_groups.py  test_hierarchical_groups_datamesh.py  test_performance.py
tests/: test_chunking.py  test_cli.py  test_core.py  test_datamesh_groups.py  test_missing.py  test_models.py  test_packing.py  test_parallel.py  test_remote_files.py  test_retry.py  test_retry_logic.py  test_retry_logic_final.py  test_rolling_archive.py  test_rolling_archive_datamesh.py  test_rolling_archive_file.py  test_simple_retry.py  test_time.py
zarrify/: __init__.py  api.py  chunking.py  cli.py  config.py  core.py  exceptions.py  missing.py  models.py  packing.py  time.py
zarrio/: __init__.py  api.py  cli.py  core.py  models.py  rolling_archive.py  time_parsing.py
(+33 files in other folders)
